--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
         <nav class="container">
-            <div><img class="logo-img" src="Images\Small-pen.png"><span class="logo-text">Aptwrite</span></div>
+            <div><img class="logo-img" src=""><span class="logo-text">Aptwrite</span></div>
             <!--<div class="logo">MS</div>-->
             <div class="nav-links">
                 <a href="#about">About</a>
@@ -95,7 +95,7 @@
             <h2 class="section-title">Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-aos="zoom-in">
-                    <img src="Images\Hieroglyph-screen.jpg" alt="Crafting, clear, concise technical documentation">
+                    <img src="/images/Hieroglyph-screen.jpg" alt="Crafting, clear, concise technical documentation">
                     <div class="portfolio-overlay">
                         <h3>Technical Writing</h3>
                         <p>Clear, concise technical writing. </p><p><a href="https://www.metalroofing.org.nz/sites/default/files/RoofingCOP_v25-06_2025-06-01.pdf" target="_blank" rel="noopener">The Zealand Metal Roof and Wall Cladding Code of Practice</a> </p>
