--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
         <nav class="container">
-            <div><img class="logo-img" src="/main/images/Small-pen.png"><span class="logo-text">Aptwrite</span></div>
+            <div><img class="logo-img" src=".../images/Small-pen.png"><span class="logo-text">Aptwrite</span></div>
             <!--<div class="logo">MS</div>-->
             <div class="nav-links">
                 <a href="#about">About</a>
