--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <!--<section id="contact" class="contact">
+   <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
             <form class="contact-form" data-aos="fade-up">
@@ -142,9 +142,9 @@
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </div>
-    </section>-->
+    </section>
 
-<section id="contact" class="contact">
+<!--<section id="contact" class="contact">
   <div class="container">
     <h2 class="section-title">Get in Touch</h2>
     
@@ -172,12 +172,12 @@
       <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">-->
 
       <!-- Optional: Customize email subject -->
-      <input type="hidden" name="_subject" value="New Contact Form Submission">
+     <!-- <input type="hidden" name="_subject" value="New Contact Form Submission">
 
       <button type="submit" class="submit-btn">Submit</button>
     </form>
   </div>
-</section>
+</section>-->
 
 
 
