--- a/index.html
+++ b/index.html
@@ -193,6 +193,71 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 1000,
+            once: true
+        });
+
+        // Typed.js initialization
+        new Typed('#typed-text', {
+            strings: [
+                "Technical Writer & Documentation Specialist",
+                "API Documentation Expert",
+                "Content Strategist"
+            ],
+            typeSpeed: 50,
+            backSpeed: 30,
+            loop: true
+        });
+
+        // Theme Toggle
+        const themeToggle = document.getElementById('themeToggle');
+        const icon = themeToggle.querySelector('i');
+
+        themeToggle.addEventListener('click', () => {
+            document.body.dataset.theme = document.body.dataset.theme === 'dark' ? 'light' : 'dark';
+            icon.classList.toggle('fa-moon');
+            icon.classList.toggle('fa-sun');
+        });
+
+        // Smooth Scroll
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Form Validation
+        const form = document.querySelector('.contact-form');
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            // Add your form submission logic here
+            alert('Message sent successfully!');
+            form.reset();
+        });
+
+        // Generate Noise Texture
+        const noise = document.querySelector('.noise');
+        const ctx = document.createElement('canvas').getContext('2d');
+        ctx.canvas.width = 100;
+        ctx.canvas.height = 100;
+        
+        for (let x = 0; x < 100; x++) {
+            for (let y = 0; y < 100; y++) {
+                const value = Math.floor(Math.random() * 255);
+                ctx.fillStyle = `rgb(${value},${value},${value})`;
+                ctx.fillRect(x, y, 1, 1);
+            }
+        }
+        
+        noise.style.backgroundImage = `url(${ctx.canvas.toDataURL()})`;
+    </script>
 </body>
 </html>
