--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                     <label for="message">Message</label>
                     <textarea id="message" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
+                <button type="submit" class="submit-btn"  action="https://formsubmit.co/marius@aptwrite.nz" 
+          method="POST">Send Message</button>
             </form>
         </div>
     </section>
