--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
    <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
-            <form class="contact-form" data-aos="fade-up">
+            
+                 <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" required>
