--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
             
-                 <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn"  action="https://formsubmit.co/marius@aptwrite.nz" 
-          method="POST">Send Message</button>
-            </form>
+                <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required>
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+  </div>
+  <div class="form-group">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+  </div>
+  <button type="submit" class="submit-btn">Send Message</button>
+</form>
+
         </div>
     </section>
 
