--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             <h2 class="section-title">Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-aos="zoom-in">
-                    <img src="/images/Hieroglyph-screen.jpg" alt="Crafting, clear, concise technical documentation">
+                    <img src="images/Hieroglyph-screen.jpg" alt="Crafting, clear, concise technical documentation">
                     <div class="portfolio-overlay">
                         <h3>Technical Writing</h3>
                         <p>Clear, concise technical writing. </p><p><a href="https://www.metalroofing.org.nz/sites/default/files/RoofingCOP_v25-06_2025-06-01.pdf" target="_blank" rel="noopener">The Zealand Metal Roof and Wall Cladding Code of Practice</a> </p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-aos="zoom-in" data-aos-delay="100">
-                    <img src="Images\neon-web.jpg" alt="Focussed web design for small, local businesses">
+                    <img src="images/neon-web.jpg" alt="Focussed web design for small, local businesses">
                     <div class="portfolio-overlay">
                         <h3>Web Development</h3>
                         <p>Small, fast-loading website for small businesses. No bloated plugins to manage.</p>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="Images\Desk with coffee.jpg" alt="Articles, general web content, blog posts.">
+                    <img src="images/Desk with coffee.jpg" alt="Articles, general web content, blog posts.">
                     <div class="portfolio-overlay">
                         <h3>Articles, General content, Blog posts</h3>
                         <p>Generalist writer for articles, blogs, and web content.</p>
