--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
         const themeToggle = document.getElementById('themeToggle');
         const icon = themeToggle.querySelector('i');
 
-        themeToggle.addEventListener('click', () => {
-            document.body.dataset.theme = document.body.dataset.theme === 'dark' ? 'light' : 'dark';
+        themeToggle.addEventListener('click', () => {  
+            const currentTheme = document.body.dataset.theme || 'light';
+document.body.dataset.theme = currentTheme === 'dark' ? 'light' : 'dark';
             icon.classList.toggle('fa-moon');
             icon.classList.toggle('fa-sun');
         });
