--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
         // Typed.js initialization
         new Typed('#typed-text', {
             strings: [
-                "Technical Writer & Documentation Specialist",
-                "API Documentation Expert",
-                "Content Strategist"
+                "Technical Content Writer & Documentation",
+                "Small, fast-loading Websites",
+                "General Web Content"
             ],
             typeSpeed: 50,
             backSpeed: 30,
