--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marius Strydom | Technical Content Writer</title>
+    <meta name="description" content="Marius Strydom - New Zealand-based technical content writer, specialising in technical writing, web development, and content strategy for Kiwi businesses.">
+    <meta name="keywords" content="technical content writer, New Zealand writer, technical documentation, web development, articles, blog posts, Kiwi businesses">
+    <title>New Zealand Technical Content Writer | Marius Strydom</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +14,7 @@
     
     <header>
         <nav class="container">
-            <div><img class="logo-img" src="images/Small-pen.png"><span class="logo-text">Aptwrite</span></div>
+            <div><img class="logo-img" src="images/Small-pen.png" alt="Aptwrite logo - Marius Strydom writing services"><span class="logo-text">Aptwrite</span></div>
             <!--<div class="logo">MS</div>-->
             <div class="nav-links">
                 <a href="#about">About</a>
@@ -29,7 +31,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content animate-fade-in">
-                <h1>Crafting Clear & Concise Technical Documentation</h1>
+                <h1>Crafting Clear & Concise Technical Documentation for New Zealand Business</h1>
                 <p id="typed-text"></p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
@@ -55,7 +57,7 @@
                 <div class="about-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fas fa-code"></i>
                     <h3>Small, Fast-loading Websites</h3>
-                    <p>No everyone needs a behemoth with layers of plugins and e-commerse functionality. Sometimes you just want future customer to know where you are.</p>
+                    <p>No, not everyone needs a behemoth with layers of plugins and e-commerce functionality. Sometimes you just want future customers to know where you are.</p>
                 </div>
                 <div class="about-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="fas fa-book"></i>
@@ -95,14 +97,14 @@
             <h2 class="section-title">Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-aos="zoom-in">
-                    <img src="images/Hieroglyph-screen.jpg" alt="Crafting, clear, concise technical documentation">
+                    <img src="images/Hieroglyph-screen.jpg" alt="Clear, concise technical documentation">
                     <div class="portfolio-overlay">
                         <h3>Technical Writing</h3>
                         <p>Clear, concise technical writing. </p><p><a href="https://www.metalroofing.org.nz/sites/default/files/RoofingCOP_v25-06_2025-06-01.pdf" target="_blank" rel="noopener">The Zealand Metal Roof and Wall Cladding Code of Practice</a> </p>
                     </div>
                 </div>
                 <div class="portfolio-item" data-aos="zoom-in" data-aos-delay="100">
-                    <img src="images/neon-web.jpg" alt="Focussed web design for small, local businesses">
+                    <img src="images/neon-web.jpg" alt=" Focussed web design for small, local businesses">
                     <div class="portfolio-overlay">
                         <h3>Web Development</h3>
                         <p>Small, fast-loading website for small businesses. No bloated plugins to manage.</p>
@@ -111,7 +113,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="images/Desk with coffee.jpg" alt="Articles, general web content, blog posts.">
+                    <img src="images/Desk with coffee.jpg" alt=" Articles, general web content, blog posts.">
                     <div class="portfolio-overlay">
                         <h3>Articles, General content, Blog posts</h3>
                         <p>Generalist writer for articles, blogs, and web content.</p>
