--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content animate-fade-in">
-                <h1>Crafting Clear & Concise Technical Documentation for New Zealand Business</h1>
+                <h1>Crafting Clear & Concise Technical Documentation for New Zealand</h1>
                 <p id="typed-text"></p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
@@ -40,7 +40,7 @@
 
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">Meet Marius Strydom</h2>
+            <h2 class="section-title">Marius Strydom</h2>
             <div class="about-text">
   I'm a New Zealand-based content writer, technical communicator, and web specialist with over 30 years’ experience.  
   I help Kiwi businesses and organisations—from startups to established industry groups—communicate clearly and effectively.  
@@ -57,7 +57,7 @@
                 <div class="about-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fas fa-code"></i>
                     <h3>Small, Fast-loading Websites</h3>
-                    <p>No, not everyone needs a behemoth with layers of plugins and e-commerce functionality. Sometimes you just want future customers to know where you are.</p>
+                    <p>No, not everyone needs a behemoth with layers of plugins, and e-commerce, backed by huge frameworks. Sometimes, you only want future customers to know where you are.</p>
                 </div>
                 <div class="about-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="fas fa-book"></i>
@@ -108,7 +108,7 @@
                     <div class="portfolio-overlay">
                         <h3>Web Development</h3>
                         <p>Small, fast-loading website for small businesses. No bloated plugins to manage.</p>
-                        <p>Like this one, and</p>
+                        <p>Like this one...</p>
                         
                     </div>
                 </div>
@@ -174,7 +174,7 @@
             strings: [
                 "Technical Content Writer & Documentation",
                 "Small, fast-loading Websites",
-                "General Web Content"
+                "General Web Content, Articles, and Blog Posts"
             ],
             typeSpeed: 50,
             backSpeed: 30,
