--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
    <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
+            <p>Mobile: 027 447 0182<p>
+<p>Email: marius@aptwrite.nz 
+<p> or complete the contact form below.</p>
             
                 <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
   <div class="form-group">
