--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
             
-            <div class="container"><p>Mobile: 027 447 0182<p>
+            <div class="contactdets"><p>Mobile: 027 447 0182<p>
 <p>Email: marius@aptwrite.nz 
 <p> or complete the contact form below.</p></div>
             
