--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
             
-            <div class="contactdets"><p>Mobile: 027 447 0182<p>
-<p>Email: marius@aptwrite.nz 
-<p> or complete the contact form below.</p></div>
+            <div class="contactdets">
+                <div>Mobile: 027 447 0182</div>
+<div>Email: marius@aptwrite.nz </div>
+<div>or complete the contact form below.</div></div>
             
                 <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
   <div class="form-group">
