--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="contactgrid">
       <div class="contactdets">
         <p>Mobile: 027 447 0182</p>
-        <p>Email: marius@aptwrite.nz</p>
+        <p><a href="mailto:marius@aptwrite.nz">Email: marius@aptwrite.nz</a></p>
         <p>or complete the contact form.</p>
       </div>
       <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST">
@@ -152,33 +152,7 @@
   </div>
 </section>
 
-   <!--<section id="contact" class="contact">
-        <div class="container">
-            <h2 class="section-title">Get in Touch</h2>
-            
-            <div class="contactdets">
-                <div>Mobile: 027 447 0182</div>
-<div>Email: marius@aptwrite.nz </div>
-<div>or complete the contact form below.</div></div>
-            
-                <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST" data-aos="fade-up">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
-  </div>
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div class="form-group">
-    <label for="message">Message</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
-  </div>
-  <button type="submit" class="submit-btn">Send Message</button>
-</form>
-
-        </div>
-    </section>-->
+  
 
 
     <footer>
