--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="contactgrid">
       <div class="contactdets">
         <p>Mobile: 027 447 0182</p>
-        <p><a href="mailto:marius@aptwrite.nz">Email: marius@aptwrite.nz</a></p>
+        <p><a href="mailto:marius@aptwrite.nz">Email me</a></p>
         <p>or complete the contact form.</p>
       </div>
       <form class="contact-form" action="https://formsubmit.co/marius@aptwrite.nz" method="POST">
